<resources>
    <string name="app_name">Gunjan</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="by_signing_you_agree_with_our">By signing, you agree with our</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="retrieve">Please enter your registered mobile number in order to retrieve your password</string>
    <string name="submit">Submit</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_mobile">OTP sent to your mobile number</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="bigger_video">Video should not be bigger then 20 seconds</string>
    <string name="please_reset_your_password">Please reset your password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="next">Next</string>
    <string name="valid_age">Must be 18 year old</string>
    <string name="register_mobile_number">Register Mobile Number</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_profile_name">Enter profile Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_pincode">Enter PinCode</string>
    <string name="what_is_my_pincode">What is My PinCode?</string>
    <string name="continue_txt">Continue</string>
    <string name="profile_identification">Profile Identification</string>
    <string name="upload_profile_photo_for">Upload profile photo for</string>
    <string name="identification">Identification</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="about_yourself">About Yourself</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="add_photo">Add Photo</string>
    <string name="write_here">Write here...</string>
    <string name="select_your_community">Select Your Community</string>
    <string name="send_request_to_join">Send request to join</string>
    <string name="add_your_community">Add Your Community</string>
    <string name="tell_about_your_community">Tell About Your Community...</string>
    <string name="add_logo">Add Logo</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="enter_mail">Please Enter Email Address</string>
    <string name="valid_mail">Please Enter Valid Email Address</string>
    <string name="select_or_capture_files">Select or Capture Files</string>
    <string name="record_video">Record Video</string>
    <string name="capture_pic">Capture Pic</string>
    <string name="video">Video</string>
    <string name="join_community">Join Community</string>
    <string name="leave_community">Leave Community</string>
    <string name="your_request_for_joining_the_community_is_pending_we_will_notify_once_admin_approves_your_request">Your request for joining the community is pending. We will notify once admin approves your request.</string>
    <string name="do_you_really_want_to_leave_this_community">Do you really want to leave this community?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="community_help">Community Help</string>
    <string name="theme">Theme</string>
    <string name="switch_community">Switch Community</string>
    <string name="community_setting">Community Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_delete_your_account">Do you want to delete your account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="save">Save</string>
    <string name="add_edit_interest">Add/Edit Interest</string>
    <string name="followers_following">Followers/Following</string>
    <string name="to">To</string>
    <string name="community_name">Community Name</string>
    <string name="amount">Amount</string>
    <string name="say_thanks">Say Thanks</string>
    <string name="total">Total</string>
    <string name="claim_rewards"><u>About Reward Coins</u></string>
    <string name="add_social_media_link">Add Social Media Link</string>
    <string name="profile_details">Profile Details</string>
    <string name="notifications">Notifications</string>
    <string name="add_members">Add Members</string>
    <string name="add">Add</string>
    <string name="report_user">Report User</string>
    <string name="please_enter_reason">Please Enter Reason</string>
    <string name="copy_post">Copy Post</string>
    <string name="block_user">Block User</string>
    <string name="block">Do you want to block this user?</string>
    <string name="blockk">Block</string>
    <string name="cancel">Cancel</string>
    <string name="blocked_user_list">Blocked User List</string>
    <string name="unblock">Unblock</string>
    <string name="discussion">Discussion</string>
    <string name="announcement">Announcement</string>
    <string name="trending">Trending</string>
    <string name="events">Events</string>
    <string name="valid_mobile">Please Enter Valid Mobile Number</string>
    <string name="enter_mobile">Please Enter Mobile Number</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="enter_profilename">Please Enter Profile Name</string>
    <string name="enter_firstname">Please Enter First Name</string>
    <string name="enter_lastname">Please Enter Last Name</string>
    <string name="pincode">Please Enter PinCode</string>
    <string name="choose_pic">Please choose profile pic</string>
    <string name="about">Please enter about yourself</string>
    <string name="about_limit">About yourself must be 50 characters</string>
    <string name="enter_dob">Please enter date of birth</string>
    <string name="select_gender">Please select gender</string>
    <string name="select_interest">Please select interest</string>
    <string name="my_communities">My Communities</string>
    <string name="request_list">Request List</string>
    <string name="no_requests">No Requests</string>
    <string name="no_community">No Community</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="accept_caps">ACCEPT</string>
    <string name="joined_communities">Joined Communities</string>
    <string name="view_details">View Details</string>
    <string name="community_details">Community Details</string>
    <string name="confirm_leave">Please select radio button to confirm for leave community</string>
    <string name="upload_your_post">Upload Your Post</string>
    <string name="text_post">Text Post</string>
    <string name="media_post">Media Post</string>
    <string name="write_your_post">Write your post..</string>
    <string name="post">Post</string>
    <string name="no_posts_yet">No Posts Yet.</string>
    <string name="comments">Comments</string>
    <string name="no_comments_yet">No Comments Yet.</string>
    <string name="no_reply_yet">No Reply Yet.</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="joined_created_communities">Joined/Created Communities</string>
    <string name="no_notifications">No Notifications</string>
    <string name="settings">Settings</string>
    <string name="no_users">No Users</string>
    <string name="search_member_by_name_city_or_state">Search member by name,city or state</string>
    <string name="and">\u0020and\u0020</string>
    <string name="don_t_have_account_sign_up">"Don't" have account? Sign Up</string>
    <string name="connecting_people_come_together">Connecting people come together</string>
    <string name="please_register_your_mobile_number">Please register your mobile number</string>
    <string name="resend_code">Resend Code</string>
    <string name="select_state">Select State</string>
    <string name="please_state">Please select state</string>
    <string name="select_city">Select City</string>
    <string name="please_city">Please select city</string>
    <string name="press_gallery">Press Gallery or Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="photo_verification">Photo Verification</string>
    <string name="upload_photo_for">Upload photo for \n Identification</string>
    <string name="jf">(100 char. max.)</string>
    <string name="check_internet">Please check your internet connection.</string>
    <string name="search_your_community">Search your community</string>
    <string name="fifty_char">(50 char. max.)</string>
    <string name="twofifty_char">(250 char. max.)</string>
    <string name="please_community_name">Please Enter Community Name</string>
    <string name="about_community">Please Enter About Community</string>
    <string name="select_category">Select Category</string>
    <string name="please_category">Please select category</string>
    <string name="enter_community_name">Enter Community Name</string>
    <string name="click_join">Click join button to enter </string>
    <string name="co"> community</string>
    <string name="ok">Ok</string>
    <string name="block_in_community">You are blocked in this community</string>
    <string name="about_tab">About</string>
    <string name="post_tab">Post</string>
    <string name="home">Home</string>
    <string name="members">Members</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="showmore">Showmore...</string>
    <string name="_0_comments">0 Comments</string>
    <string name="comment">Comment</string>
    <string name="vote">Vote</string>
    <string name="share">Share</string>
    <string name="showless">Showless</string>
    <string name="ago">ago</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="weeks">week</string>
    <string name="days">days</string>
    <string name="commentss">Comments</string>
    <string name="interests">Interests</string>
    <string name="view_all">View All</string>
    <string name="gender_select">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="donate">Donate</string>
    <string name="received">Received</string>
    <string name="requests">\"Requests: \"</string>
    <string name="active">Active</string>
    <string name="switchh">Switch</string>
    <string name="coins">Coins</string>
</resources>