<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/community_name"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/amount"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_marginEnd="@dimen/margin_15"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/say_thanks"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/padding_3"
        android:layout_marginStart="@dimen/padding_2"
        android:layout_marginEnd="@dimen/padding_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:id="@+id/donate_recycler"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_40dp"
        android:layout_marginStart="@dimen/padding_2"
        android:layout_marginEnd="@dimen/padding_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pink"/>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/total"
            android:textSize="14sp"
            android:textColor="@color/txt_color"/>
        <TextView
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppin_regular"
            android:text="97 \u20B9"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/txt_color"/>
        <TextView
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/claim_rewards"
            android:textSize="14sp"
            android:textColor="@color/blue"/>
    </LinearLayout>
</LinearLayout>