<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DonationFragment">
    <LinearLayout

        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/to"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/community_name"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinbold"
            android:text="@string/coins"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/padding_3"
        android:layout_marginStart="@dimen/padding_2"
        android:layout_marginEnd="@dimen/padding_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:id="@+id/donate_recycler"/>
</LinearLayout>