<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_window"
    android:paddingTop="@dimen/margin_10dp"
    android:paddingBottom="@dimen/margin_10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/text_30sp"
    android:elevation="1dp"
    android:layout_gravity="center"
    android:background="@drawable/circle_white"
    android:orientation="vertical">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/close"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/margin_15"
        android:layout_height="@dimen/margin_15"
        android:src="@drawable/cross_black"></ImageView>

    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_or_capture_files"
        android:id="@+id/tvtitle"
        android:gravity="center"
        android:textColor="@color/pink"
        android:fontFamily="@font/popinbold"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"></TextView>
   <RelativeLayout
       android:id="@+id/gallery"
       android:layout_marginTop="@dimen/margin_10dp"
       android:layout_marginBottom="@dimen/margin_10dp"
       android:layout_marginStart="@dimen/margin_15"
       android:layout_marginEnd="@dimen/margin_10dp"
       android:layout_below="@+id/tvtitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@id/n"
           android:layout_marginStart="@dimen/padding_8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/gallery"
          android:gravity="center"
           android:textColor="@color/black"
           android:fontFamily="@font/poppin_medium"
           android:textSize="15dp"></TextView>


   </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line1"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/padding_5"
        android:layout_below="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pink"></RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_layout1"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_below="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_medium"
            android:textSize="15dp"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line2"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/padding_5"
        android:layout_below="@+id/rl_layout1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pink"></RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_layout2"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_below="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_video"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_medium"
            android:textSize="15dp"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line3"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/padding_5"
        android:layout_below="@+id/rl_layout2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pink"></RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_layout3"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_below="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_pic"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_medium"
            android:textSize="15dp"></TextView>
    </RelativeLayout>

</RelativeLayout>
</RelativeLayout>
