<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_window"
    android:padding="@dimen/margin_20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_40dp"
    android:layout_marginEnd="@dimen/margin_15"
    android:layout_marginBottom="@dimen/text_30sp"
    android:layout_gravity="end"
    android:elevation="1dp"
    android:background="@drawable/circle_white"
    android:orientation="vertical">
    <ImageView
        android:layout_toRightOf="@id/report"

        android:id="@+id/close"
        android:layout_width="@dimen/margin_15"
        android:layout_height="@dimen/margin_15"
        android:src="@drawable/cross_black"/>
    <RelativeLayout
        android:layout_below="@id/close"
        android:layout_centerHorizontal="true"
        android:id="@+id/report"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_user"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_regular"
            android:textSize="@dimen/margin_15"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/copy_post"
        android:layout_below="@+id/report"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginEnd="@dimen/margin_7"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_post"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_regular"
            android:textSize="@dimen/margin_15"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/block"
        android:layout_below="@+id/copy_post"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginEnd="@dimen/margin_7"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_user"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_regular"
            android:textSize="@dimen/margin_15"></TextView>
    </RelativeLayout>
</RelativeLayout>