<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window"
    android:elevation="1dp"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_15"
    android:background="@drawable/circle_white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginEnd="@dimen/margin_15"
            android:layout_marginStart="@dimen/margin_15"
            android:layout_alignParentEnd="true"
            android:id="@+id/close"
            android:layout_width="@dimen/text_17sp"
            android:layout_height="@dimen/text_17sp"
            android:src="@drawable/cross_black"/>
    <TextView
        android:layout_marginTop="@dimen/margin_25"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_17sp"
        android:textColor="@color/txt_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/block_user"/>
    <LinearLayout
        android:layout_marginTop="@dimen/text_30sp"
        android:paddingTop="@dimen/margin_20dp"
        android:paddingBottom="@dimen/margin_20dp"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_header">

        <TextView
            android:layout_marginStart="@dimen/margin_25"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_15"
            android:id="@+id/reset"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_13sp"
            android:textColor="@color/black2"
            android:fontFamily="@font/poppin_regular"
            android:text="@string/block"/>
      <LinearLayout
          android:layout_marginBottom="@dimen/padding_5"
          android:layout_marginTop="@dimen/margin_20dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <LinearLayout
              android:layout_marginStart="@dimen/margin_20dp"
              android:layout_marginEnd="@dimen/margin_15"
              android:layout_weight="1"
              android:id="@+id/no"
              android:elevation="1dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@drawable/pink_border2"
              android:orientation="horizontal"
              android:padding="@dimen/padding_5">
              <TextView
                  android:layout_marginTop="@dimen/padding_5"
                  android:layout_marginBottom="@dimen/padding_5"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:textSize="@dimen/margin_15"
                  android:fontFamily="@font/popinbold"
                  android:textColor="@color/black2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/cancel"/>
          </LinearLayout>
        <LinearLayout
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_15"
           android:layout_weight="1"
            android:id="@+id/yes"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:orientation="horizontal"
            android:padding="@dimen/padding_5">
            <TextView
                android:layout_marginTop="@dimen/padding_5"
                android:layout_marginBottom="@dimen/padding_5"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/margin_15"
                android:fontFamily="@font/popinbold"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>